--- a/projeto-final/index.html
+++ b/projeto-final/index.html
@@ -24,5 +24,24 @@
 
     <title>Isabeli Reik</title>
   </head>
-  <body></body>
+
+  <body>
+    <header class="header">
+      <a href="https://www.linkedin.com/in/isabelireik/" class="header__link">
+        <img class="icone" src="assets/icones/linkedin.svg" />
+        <!- fill="#87d0a6" no arquivo svg para mudar a cor do ícone->
+      </a>
+
+      <a href="https://github.com/isabelirk" class="header__link">
+        <img class="icone" src="assets/icones/github.svg" />
+      </a>
+
+      <a
+        href="https://www.instagram.com/vfnoryvrk/?hl=pt-br"
+        class="header__link"
+      >
+        <img class="icone" src="assets/icones/instagram.svg" />
+      </a>
+    </header>
+  </body>
 </html>
