--- a/projeto-final/index.html
+++ b/projeto-final/index.html
@@ -43,5 +43,21 @@
         <img class="icone" src="assets/icones/instagram.svg" />
       </a>
     </header>
+
+    <main class="main">
+      <div class="perfil">
+        <img
+          class="perfil__foto"
+          src="assets/imagens/isabeli-reik-perfil.jpeg"
+        />
+        <h1 class="perfil__nome">Isabeli Reik</h1>
+        <p class="perfil__descricao">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab, quos.
+          Esse officia nihil corrupti modi perferendis fugiat voluptate
+          inventore excepturi facilis pariatur laborum deleniti neque quae
+          debitis odit, soluta deserunt.
+        </p>
+      </div>
+    </main>
   </body>
 </html>
