estilizando as sections

--- a/index.html
+++ b/index.html
@@ -58,6 +58,40 @@
           debitis odit, soluta deserunt.
         </p>
       </div>
+
+      <section class="section">
+        <h2 class="section__titulo">Meus principais projetos</h2>
+
+        <article class="projeto">
+          <h3 class="projeto__titulo">Projeto 1</h3>
+          <p class="projeto__descricao">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam,
+            illo odio deserunt aperiam recusandae doloribus! Rem, voluptatum
+            tempore laudantium cumque repellendus odio, similique veniam est
+            ipsum cum quis nulla adipisci.
+          </p>
+        </article>
+
+        <article class="projeto">
+          <h3 class="projeto__titulo">Projeto 2</h3>
+          <p class="projeto__descricao">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam,
+            illo odio deserunt aperiam recusandae doloribus! Rem, voluptatum
+            tempore laudantium cumque repellendus odio, similique veniam est
+            ipsum cum quis nulla adipisci.
+          </p>
+        </article>
+
+        <article class="projeto">
+          <h3 class="projeto__titulo">Projeto 3</h3>
+          <p class="projeto__descricao">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam,
+            illo odio deserunt aperiam recusandae doloribus! Rem, voluptatum
+            tempore laudantium cumque repellendus odio, similique veniam est
+            ipsum cum quis nulla adipisci.
+          </p>
+        </article>
+      </section>
     </main>
   </body>
 </html>
