--- a/index.html
+++ b/index.html
@@ -93,5 +93,13 @@
         </article>
       </section>
     </main>
+
+    <footer class="footer">
+      <span class="footer__texto"
+        >Feito com
+        <img class="icone icone--texto" src="assets/icones/heart.svg" />por
+        Isabeli Reik
+      </span>
+    </footer>
   </body>
 </html>
