--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
 
   <body>
     <header class="header">
-      <a href="https://www.linkedin.com/in/isabelireik/" class="header__link">
+      <a class="header__link" href="https://www.linkedin.com/in/isabelireik/">
         <img class="icone" src="assets/icones/linkedin.svg" />
         <!- fill="#87d0a6" no arquivo svg para mudar a cor do ícone->
       </a>
 
-      <a href="https://github.com/isabelirk" class="header__link">
+      <a class="header__link" href="https://github.com/isabelirk">
         <img class="icone" src="assets/icones/github.svg" />
       </a>
 
       <a
-        href="https://www.instagram.com/vfnoryvrk/?hl=pt-br"
         class="header__link"
+        href="https://www.instagram.com/vfnoryvrk/?hl=pt-br"
       >
         <img class="icone" src="assets/icones/instagram.svg" />
       </a>
@@ -52,10 +52,11 @@
         />
         <h1 class="perfil__nome">Isabeli Reik</h1>
         <p class="perfil__descricao">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab, quos.
-          Esse officia nihil corrupti modi perferendis fugiat voluptate
-          inventore excepturi facilis pariatur laborum deleniti neque quae
-          debitis odit, soluta deserunt.
+          Prazer, sou a Isabeli! Atualmente sou aluna de graduação em Ciência da
+          Computação na Universidade Federal da Fronteira Sul - UFFS Campus
+          Chapecó - SC, e do curso de Desenvolvedor Full Stack em JavaScript da
+          OneBitCode. Sou apaixonada por tecnologia, métodos ágeis e livros dos
+          mais diversos assuntos.
         </p>
       </div>
 
