ajustes de acessibilidade

--- a/index.html
+++ b/index.html
@@ -27,20 +27,41 @@
 
   <body>
     <header class="header">
-      <a class="header__link" href="https://www.linkedin.com/in/isabelireik/">
-        <img class="icone" src="assets/icones/linkedin.svg" />
+      <a
+        class="header__link"
+        title="Me acompanhe no LinkedIn"
+        href="https://www.linkedin.com/in/isabelireik/"
+      >
+        <img
+          class="icone"
+          alt="ícone do linkedin"
+          src="assets/icones/linkedin.svg"
+        />
         <!- fill="#87d0a6" no arquivo svg para mudar a cor do ícone->
-      </a>
-
-      <a class="header__link" href="https://github.com/isabelirk">
-        <img class="icone" src="assets/icones/github.svg" />
       </a>
 
       <a
         class="header__link"
+        title="Me acompanhe no GitHub"
+        href="https://github.com/isabelirk"
+      >
+        <img
+          class="icone"
+          alt="ícone do github"
+          src="assets/icones/github.svg"
+        />
+      </a>
+
+      <a
+        class="header__link"
+        title="Me acompanhe no Instagram"
         href="https://www.instagram.com/vfnoryvrk/?hl=pt-br"
       >
-        <img class="icone" src="assets/icones/instagram.svg" />
+        <img
+          class="icone"
+          alt="ícone do instagram"
+          src="assets/icones/instagram.svg"
+        />
       </a>
     </header>
 
@@ -48,6 +69,7 @@
       <div class="perfil">
         <img
           class="perfil__foto"
+          alt="foto de perfil da Isabeli Reik"
           src="assets/imagens/isabeli-reik-perfil.jpeg"
         />
         <h1 class="perfil__nome">Isabeli Reik</h1>
@@ -98,8 +120,11 @@
     <footer class="footer">
       <span class="footer__texto"
         >Feito com
-        <img class="icone icone--texto" src="assets/icones/heart.svg" />por
-        Isabeli Reik
+        <img
+          class="icone icone--texto"
+          alt="amor"
+          src="assets/icones/heart.svg"
+        />por Isabeli Reik
       </span>
     </footer>
   </body>
