--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       content="Site pessoal desenvolvido para a conclusão do curso de HTML5 e CSS3 - Potência Feminina"
     />
 
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="assets/icones/favicon.png"
+    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
