--- a/index.html
+++ b/index.html
@@ -89,36 +89,72 @@
       </div>
 
       <section class="section">
-        <h2 class="section__titulo">Meus principais projetos</h2>
+        <h2 class="section__titulo">Certificações</h2>
 
-        <article class="projeto">
-          <h3 class="projeto__titulo">Projeto 1</h3>
-          <p class="projeto__descricao">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam,
-            illo odio deserunt aperiam recusandae doloribus! Rem, voluptatum
-            tempore laudantium cumque repellendus odio, similique veniam est
-            ipsum cum quis nulla adipisci.
+        <article class="curso">
+          <h3 class="curso__titulo">HTML5</h3>
+          <p class="curso__descricao">
+            Módulo de HTML5 realizado no curso Programador Full Stack JavaScript
+            Profissional na OneBitCode.
           </p>
+          <a
+            class="curso__link"
+            href="https://cursos.onebitcode.com/cert/XjWEFpw3BwSOy3t"
+            >Ver credencial</a
+          >
         </article>
 
-        <article class="projeto">
-          <h3 class="projeto__titulo">Projeto 2</h3>
-          <p class="projeto__descricao">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam,
-            illo odio deserunt aperiam recusandae doloribus! Rem, voluptatum
-            tempore laudantium cumque repellendus odio, similique veniam est
-            ipsum cum quis nulla adipisci.
+        <article class="curso">
+          <h3 class="curso__titulo">CSS3</h3>
+          <p class="curso__descricao">
+            Módulo de CSS3 realizado no curso Programador Full Stack JavaScript
+            Profissional na OneBitCode.
           </p>
+          <a
+            class="curso__link"
+            href="https://cursos.onebitcode.com/cert/3ljyIrYoDYuXAYI"
+            >Ver credencial</a
+          >
         </article>
 
-        <article class="projeto">
-          <h3 class="projeto__titulo">Projeto 3</h3>
-          <p class="projeto__descricao">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam,
-            illo odio deserunt aperiam recusandae doloribus! Rem, voluptatum
-            tempore laudantium cumque repellendus odio, similique veniam est
-            ipsum cum quis nulla adipisci.
+        <article class="curso">
+          <h3 class="curso__titulo">CSS Moderno</h3>
+          <p class="curso__descricao">
+            Módulo de CSS Moderno realizado no curso Programador Full Stack
+            JavaScript Profissional na OneBitCode.
           </p>
+          <a
+            class="curso__link"
+            href="https://cursos.onebitcode.com/cert/P4Rqf0e5YefkyLs"
+            >Ver credencial</a
+          >
+        </article>
+
+        <article class="curso">
+          <h3 class="curso__titulo">Comunicação Não Violenta</h3>
+          <p class="curso__descricao">
+            Curso sobre a CNV - Comunicação Não Violenta (desenvolvido pelo
+            autor Marshall Rosenberg), disponíbilizado pela Enap - Escola
+            Nacional de Administração Pública.
+          </p>
+          <a
+            class="curso__link"
+            href="https://www.escolavirtual.gov.br/documentos/validacao/certificadocheck/dZIn8796159N7Em"
+            >Ver credencial</a
+          >
+        </article>
+
+        <article class="curso">
+          <h3 class="curso__titulo">Inteligência Emocional</h3>
+          <p class="curso__descricao">
+            Curso sobre Inteligência Emocional, disponíbilizado pela Enap -
+            Escola Nacional de Administração Pública.
+          </p>
+          <a
+            class="curso__link"
+            href="https://www.escolavirtual.gov.br/documentos/validacao/certificadocheck/9vK98125635XmdQ"
+            >Ver credencial</a
+          >
         </article>
       </section>
     </main>
